Fix data type handling in season collection notebook
Convert Position and GridPosition to numeric before comparisons:
- Add pd.to_numeric() conversion with error handling
- Create Position_num and GridPosition_num columns
- Fix winner detection logic
- Add data type inspection cells
- Properly calculate pole-to-win conversion

Resolves empty win counts issue

--- a/notebooks/collect_2024_season.ipynb
+++ b/notebooks/collect_2024_season.ipynb
@@ -38,7 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create collector instance\n",
     "collector = F1DataCollector()\n",
     "\n",
     "print(\"Starting 2024 season collection...\")\n",
@@ -59,13 +58,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Track collection time\n",
     "start_time = time.time()\n",
     "\n",
-    "# Collect all 2024 races\n",
     "data_2024 = collector.collect_season_data(2024, include_sprints=False)\n",
     "\n",
-    "# Calculate elapsed time\n",
     "elapsed_time = time.time() - start_time\n",
     "minutes = int(elapsed_time // 60)\n",
     "seconds = int(elapsed_time % 60)\n",
@@ -86,7 +82,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Basic info\n",
     "print(f\"Total records: {len(data_2024):,}\")\n",
     "print(f\"Shape: {data_2024.shape}\")\n",
     "print(f\"Memory usage: {data_2024.memory_usage(deep=True).sum() / 1024:.2f} KB\")"
@@ -98,7 +93,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check number of races\n",
     "num_races = data_2024['race_name'].nunique()\n",
     "num_drivers = data_2024['DriverNumber'].nunique()\n",
     "\n",
@@ -113,7 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List all races\n",
     "print(\"\\nRaces in 2024 season:\")\n",
     "races = data_2024[['round', 'race_name', 'circuit', 'date']].drop_duplicates().sort_values('round')\n",
     "print(races.to_string(index=False))"
@@ -132,7 +125,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check for missing values\n",
     "key_columns = ['Position', 'GridPosition', 'FullName', 'TeamName', 'Points', 'Status']\n",
     "print(\"Missing values in key columns:\")\n",
     "print(data_2024[key_columns].isnull().sum())"
@@ -144,13 +136,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DNF statistics\n",
+    "# Check data types\n",
+    "print(\"\\nData types:\")\n",
+    "print(f\"Position: {data_2024['Position'].dtype}\")\n",
+    "print(f\"GridPosition: {data_2024['GridPosition'].dtype}\")\n",
+    "print(f\"\\nSample values:\")\n",
+    "print(data_2024[['Position', 'GridPosition', 'FullName']].head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert positions to numeric for analysis\n",
+    "data_2024['Position_num'] = pd.to_numeric(data_2024['Position'], errors='coerce')\n",
+    "data_2024['GridPosition_num'] = pd.to_numeric(data_2024['GridPosition'], errors='coerce')\n",
+    "\n",
+    "print(\"Converted to numeric successfully\")\n",
+    "print(f\"Position_num range: {data_2024['Position_num'].min():.0f} to {data_2024['Position_num'].max():.0f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "total_entries = len(data_2024)\n",
     "finished = (data_2024['Status'] == 'Finished').sum()\n",
     "dnf = total_entries - finished\n",
     "dnf_rate = (dnf / total_entries) * 100\n",
     "\n",
-    "print(f\"\\nDNF Statistics:\")\n",
+    "print(f\"DNF Statistics:\")\n",
     "print(f\"Total entries: {total_entries}\")\n",
     "print(f\"Finished: {finished}\")\n",
     "print(f\"DNFs: {dnf}\")\n",
@@ -163,7 +182,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Most common DNF reasons\n",
     "dnf_data = data_2024[data_2024['Status'] != 'Finished']\n",
     "print(\"\\nTop DNF reasons:\")\n",
     "print(dnf_data['Status'].value_counts().head(10))"
@@ -182,8 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Race winners\n",
-    "winners = data_2024[data_2024['Position'] == '1'][['race_name', 'FullName', 'TeamName']]\n",
+    "winners = data_2024[data_2024['Position_num'] == 1.0][['race_name', 'FullName', 'TeamName']]\n",
     "print(\"\\n2024 Race Winners:\")\n",
     "print(winners.to_string(index=False))"
    ]
@@ -194,7 +211,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Driver wins count\n",
     "win_counts = winners['FullName'].value_counts()\n",
     "print(\"\\nWins by driver:\")\n",
     "print(win_counts)"
@@ -206,9 +222,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pole to win conversion\n",
     "pole_winners = data_2024[\n",
-    "    (data_2024['Position'] == '1') & (data_2024['GridPosition'] == '1')\n",
+    "    (data_2024['Position_num'] == 1.0) & (data_2024['GridPosition_num'] == 1.0)\n",
     "]\n",
     "pole_win_rate = (len(pole_winners) / num_races) * 100\n",
     "\n",
@@ -230,7 +245,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save to CSV\n",
     "collector.save_data(data_2024, 'races_2024.csv')\n",
     "\n",
     "print(\"\\nData saved successfully!\")"
