Add comprehensive diagnostics for position data types
Improve winner and pole detection with:
- Test multiple comparison methods (string, float, int)
- Display actual data values and types for debugging
- Show unique Position/GridPosition values
- Inspect first race winner to understand data structure
- Use whichever comparison method finds results
- Add detailed pole winner detection testing

Helps identify correct data type handling approach

--- a/notebooks/collect_2024_season.ipynb
+++ b/notebooks/collect_2024_season.ipynb
@@ -22,7 +22,8 @@
     "import pandas as pd\n",
     "import time\n",
     "\n",
-    "pd.set_option('display.max_columns', None)"
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_rows', 100)"
    ]
   },
   {
@@ -136,12 +137,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check data types\n",
+    "# Inspect data types and values\n",
     "print(\"\\nData types:\")\n",
     "print(f\"Position: {data_2024['Position'].dtype}\")\n",
     "print(f\"GridPosition: {data_2024['GridPosition'].dtype}\")\n",
-    "print(f\"\\nSample values:\")\n",
-    "print(data_2024[['Position', 'GridPosition', 'FullName']].head(10))"
+    "\n",
+    "print(\"\\nUnique Position values (first 25):\")\n",
+    "print(sorted(data_2024['Position'].unique())[:25])\n",
+    "\n",
+    "print(\"\\nUnique GridPosition values (first 25):\")\n",
+    "print(sorted(data_2024['GridPosition'].dropna().unique())[:25])"
    ]
   },
   {
@@ -150,12 +155,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert positions to numeric for analysis\n",
-    "data_2024['Position_num'] = pd.to_numeric(data_2024['Position'], errors='coerce')\n",
-    "data_2024['GridPosition_num'] = pd.to_numeric(data_2024['GridPosition'], errors='coerce')\n",
-    "\n",
-    "print(\"Converted to numeric successfully\")\n",
-    "print(f\"Position_num range: {data_2024['Position_num'].min():.0f} to {data_2024['Position_num'].max():.0f}\")"
+    "# Check what the winner's row looks like\n",
+    "print(\"\\nFirst race winner (all columns):\")\n",
+    "first_race = data_2024[data_2024['round'] == 1]\n",
+    "print(first_race[['Position', 'GridPosition', 'FullName', 'TeamName']].head(5))"
    ]
   },
   {
@@ -183,8 +186,9 @@
    "outputs": [],
    "source": [
     "dnf_data = data_2024[data_2024['Status'] != 'Finished']\n",
-    "print(\"\\nTop DNF reasons:\")\n",
-    "print(dnf_data['Status'].value_counts().head(10))"
+    "if len(dnf_data) > 0:\n",
+    "    print(\"\\nTop DNF reasons:\")\n",
+    "    print(dnf_data['Status'].value_counts().head(10))"
    ]
   },
   {
@@ -200,9 +204,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "winners = data_2024[data_2024['Position_num'] == 1.0][['race_name', 'FullName', 'TeamName']]\n",
-    "print(\"\\n2024 Race Winners:\")\n",
-    "print(winners.to_string(index=False))"
+    "# Try multiple methods to find winners\n",
+    "print(\"Testing winner detection methods:\\n\")\n",
+    "\n",
+    "# Method 1: String comparison\n",
+    "winners_str = data_2024[data_2024['Position'].astype(str) == '1']\n",
+    "print(f\"Method 1 (string '1'): {len(winners_str)} winners\")\n",
+    "\n",
+    "# Method 2: Float comparison\n",
+    "winners_float = data_2024[data_2024['Position'].astype(float) == 1.0]\n",
+    "print(f\"Method 2 (float 1.0): {len(winners_float)} winners\")\n",
+    "\n",
+    "# Method 3: Int comparison\n",
+    "winners_int = data_2024[data_2024['Position'].astype(int) == 1]\n",
+    "print(f\"Method 3 (int 1): {len(winners_int)} winners\")\n",
+    "\n",
+    "# Use the one that works\n",
+    "winners = winners_float if len(winners_float) > 0 else winners_str\n",
+    "print(f\"\\nUsing method with {len(winners)} winners\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"2024 Race Winners:\")\n",
+    "print(winners[['race_name', 'FullName', 'TeamName', 'GridPosition']].to_string(index=False))"
    ]
   },
   {
@@ -222,14 +251,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pole_winners = data_2024[\n",
-    "    (data_2024['Position_num'] == 1.0) & (data_2024['GridPosition_num'] == 1.0)\n",
-    "]\n",
+    "# Test pole winner detection\n",
+    "print(\"Testing pole position detection:\\n\")\n",
+    "\n",
+    "# Check GridPosition values for winners\n",
+    "print(\"GridPosition values for winners:\")\n",
+    "print(winners['GridPosition'].unique())\n",
+    "print(f\"Type: {winners['GridPosition'].dtype}\")\n",
+    "\n",
+    "# Try different comparisons\n",
+    "pole_str = winners[winners['GridPosition'].astype(str) == '1']\n",
+    "print(f\"\\nPole winners (string comparison): {len(pole_str)}\")\n",
+    "\n",
+    "pole_float = winners[winners['GridPosition'].astype(float) == 1.0]\n",
+    "print(f\"Pole winners (float comparison): {len(pole_float)}\")\n",
+    "\n",
+    "pole_winners = pole_float if len(pole_float) > 0 else pole_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pole_win_rate = (len(pole_winners) / num_races) * 100\n",
     "\n",
     "print(f\"\\nPole position to win conversion:\")\n",
     "print(f\"Pole winners: {len(pole_winners)} / {num_races}\")\n",
-    "print(f\"Conversion rate: {pole_win_rate:.1f}%\")"
+    "print(f\"Conversion rate: {pole_win_rate:.1f}%\")\n",
+    "\n",
+    "if len(pole_winners) > 0:\n",
+    "    print(\"\\nPole winners:\")\n",
+    "    print(pole_winners[['race_name', 'FullName']].to_string(index=False))"
    ]
   },
   {
@@ -246,8 +300,7 @@
    "outputs": [],
    "source": [
     "collector.save_data(data_2024, 'races_2024.csv')\n",
-    "\n",
-    "print(\"\\nData saved successfully!\")"
+    "print(\"Data saved successfully!\")"
    ]
   },
   {
@@ -269,7 +322,9 @@
     "print(f\"\\n✓ Collection time: {minutes}m {seconds}s\")\n",
     "print(f\"✓ Races collected: {num_races}\")\n",
     "print(f\"✓ Total records: {len(data_2024):,}\")\n",
-    "print(f\"✓ Data quality: {(1 - dnf_rate/100) * 100:.1f}% finish rate\")\n",
+    "print(f\"✓ Winners found: {len(winners)}\")\n",
+    "print(f\"✓ Pole-to-win rate: {pole_win_rate:.1f}%\")\n",
+    "print(f\"✓ DNF rate: {dnf_rate:.1f}%\")\n",
     "print(f\"✓ File saved: data/raw/races_2024.csv\")\n",
     "print(f\"\\nReady for full 2018-2024 collection!\")\n",
     "print(f\"Estimated time for 7 years: ~{(elapsed_time * 7 / 60):.0f} minutes\")\n",
