--- a/notebooks/test_data_collection.ipynb
+++ b/notebooks/test_data_collection.ipynb
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-14 18:12:43,118 - INFO - FastF1 cache enabled at: /Users/ritwik/Projects/Vantage/notebooks/../data/cache\n"
+      "2025-11-14 18:29:42,677 - INFO - FastF1 cache enabled at: /Users/ritwik/Projects/Vantage/notebooks/../data/cache\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-14 18:12:45,150 - INFO - Initialized collector for years 2018-2024\n"
+      "2025-11-14 18:29:44,041 - INFO - Initialized collector for years 2018-2024\n"
      ]
     },
     {
@@ -79,34 +79,62 @@
      "output_type": "stream",
      "text": [
       "core           INFO \tLoading data for Monaco Grand Prix - Race [v3.6.1]\n",
-      "2025-11-14 18:12:47,406 - INFO - Loading data for Monaco Grand Prix - Race [v3.6.1]\n",
+      "2025-11-14 18:29:45,770 - INFO - Loading data for Monaco Grand Prix - Race [v3.6.1]\n",
       "req            INFO \tUsing cached data for session_info\n",
-      "2025-11-14 18:12:47,407 - INFO - Using cached data for session_info\n",
+      "2025-11-14 18:29:45,771 - INFO - Using cached data for session_info\n",
       "req            INFO \tUsing cached data for driver_info\n",
-      "2025-11-14 18:12:47,408 - INFO - Using cached data for driver_info\n",
+      "2025-11-14 18:29:45,772 - INFO - Using cached data for driver_info\n",
+      "2025-11-14 18:29:45,770 - INFO - Loading data for Monaco Grand Prix - Race [v3.6.1]\n",
+      "req            INFO \tUsing cached data for session_info\n",
+      "2025-11-14 18:29:45,771 - INFO - Using cached data for session_info\n",
+      "req            INFO \tUsing cached data for driver_info\n",
+      "2025-11-14 18:29:45,772 - INFO - Using cached data for driver_info\n",
       "req            INFO \tUsing cached data for session_status_data\n",
-      "2025-11-14 18:12:47,419 - INFO - Using cached data for session_status_data\n",
+      "2025-11-14 18:29:45,789 - INFO - Using cached data for session_status_data\n",
       "req            INFO \tUsing cached data for lap_count\n",
-      "2025-11-14 18:12:47,420 - INFO - Using cached data for lap_count\n",
+      "2025-11-14 18:29:45,791 - INFO - Using cached data for lap_count\n",
       "req            INFO \tUsing cached data for track_status_data\n",
-      "2025-11-14 18:12:47,421 - INFO - Using cached data for track_status_data\n",
+      "2025-11-14 18:29:45,791 - INFO - Using cached data for track_status_data\n",
       "req            INFO \tUsing cached data for _extended_timing_data\n",
-      "2025-11-14 18:12:47,425 - INFO - Using cached data for _extended_timing_data\n",
+      "2025-11-14 18:29:45,795 - INFO - Using cached data for _extended_timing_data\n",
       "req            INFO \tUsing cached data for timing_app_data\n",
-      "2025-11-14 18:12:47,427 - INFO - Using cached data for timing_app_data\n",
+      "2025-11-14 18:29:45,796 - INFO - Using cached data for timing_app_data\n",
       "core           INFO \tProcessing timing data...\n",
-      "2025-11-14 18:12:47,428 - INFO - Processing timing data...\n",
+      "req            INFO \tUsing cached data for session_status_data\n",
+      "2025-11-14 18:29:45,789 - INFO - Using cached data for session_status_data\n",
+      "req            INFO \tUsing cached data for lap_count\n",
+      "2025-11-14 18:29:45,791 - INFO - Using cached data for lap_count\n",
+      "req            INFO \tUsing cached data for track_status_data\n",
+      "2025-11-14 18:29:45,791 - INFO - Using cached data for track_status_data\n",
+      "req            INFO \tUsing cached data for _extended_timing_data\n",
+      "2025-11-14 18:29:45,795 - INFO - Using cached data for _extended_timing_data\n",
+      "req            INFO \tUsing cached data for timing_app_data\n",
+      "2025-11-14 18:29:45,796 - INFO - Using cached data for timing_app_data\n",
+      "core           INFO \tProcessing timing data...\n",
+      "2025-11-14 18:29:45,797 - INFO - Processing timing data...\n",
+      "2025-11-14 18:29:45,797 - INFO - Processing timing data...\n",
       "req            INFO \tUsing cached data for car_data\n",
-      "2025-11-14 18:12:47,754 - INFO - Using cached data for car_data\n",
+      "2025-11-14 18:29:46,148 - INFO - Using cached data for car_data\n",
+      "req            INFO \tUsing cached data for car_data\n",
+      "2025-11-14 18:29:46,148 - INFO - Using cached data for car_data\n",
       "req            INFO \tUsing cached data for position_data\n",
-      "2025-11-14 18:12:47,801 - INFO - Using cached data for position_data\n",
+      "2025-11-14 18:29:46,191 - INFO - Using cached data for position_data\n",
+      "req            INFO \tUsing cached data for position_data\n",
+      "2025-11-14 18:29:46,191 - INFO - Using cached data for position_data\n",
       "req            INFO \tUsing cached data for weather_data\n",
-      "2025-11-14 18:12:48,439 - INFO - Using cached data for weather_data\n",
+      "2025-11-14 18:29:46,810 - INFO - Using cached data for weather_data\n",
       "req            INFO \tUsing cached data for race_control_messages\n",
-      "2025-11-14 18:12:48,440 - INFO - Using cached data for race_control_messages\n",
+      "2025-11-14 18:29:46,812 - INFO - Using cached data for race_control_messages\n",
+      "req            INFO \tUsing cached data for weather_data\n",
+      "2025-11-14 18:29:46,810 - INFO - Using cached data for weather_data\n",
+      "req            INFO \tUsing cached data for race_control_messages\n",
+      "2025-11-14 18:29:46,812 - INFO - Using cached data for race_control_messages\n",
       "core           INFO \tFinished loading data for 20 drivers: ['16', '81', '55', '4', '63', '1', '44', '22', '23', '10', '14', '3', '77', '18', '2', '24', '31', '11', '27', '20']\n",
-      "2025-11-14 18:12:48,459 - INFO - Finished loading data for 20 drivers: ['16', '81', '55', '4', '63', '1', '44', '22', '23', '10', '14', '3', '77', '18', '2', '24', '31', '11', '27', '20']\n",
-      "2025-11-14 18:12:48,460 - INFO - Collected 2024 Round 8: Monaco Grand Prix\n"
+      "2025-11-14 18:29:46,830 - INFO - Finished loading data for 20 drivers: ['16', '81', '55', '4', '63', '1', '44', '22', '23', '10', '14', '3', '77', '18', '2', '24', '31', '11', '27', '20']\n",
+      "2025-11-14 18:29:46,831 - INFO - Collected 2024 Round 8: Monaco Grand Prix\n",
+      "core           INFO \tFinished loading data for 20 drivers: ['16', '81', '55', '4', '63', '1', '44', '22', '23', '10', '14', '3', '77', '18', '2', '24', '31', '11', '27', '20']\n",
+      "2025-11-14 18:29:46,830 - INFO - Finished loading data for 20 drivers: ['16', '81', '55', '4', '63', '1', '44', '22', '23', '10', '14', '3', '77', '18', '2', '24', '31', '11', '27', '20']\n",
+      "2025-11-14 18:29:46,831 - INFO - Collected 2024 Round 8: Monaco Grand Prix\n"
      ]
     },
     {
@@ -384,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
